--- a/style.css
+++ b/style.css
@@ -708,7 +708,7 @@ h3 {
 }
 
 h1 {
-    color: #F3976C!important;
+    color: #FFFFFF!important;
 }
 
 h4 {
@@ -739,7 +739,7 @@ h4 {
 }
 
 .black-background {
-    background-color: rgba(37, 37, 36, 0.7);
+    background-color: rgba(5, 5, 5, 0.7);
     padding: 40px 40px 40px 40px;
 }
 
@@ -761,7 +761,7 @@ h4 {
 }
 
 .tc-white {
-    color: #F3976C!important;
+    color: #FFFFFF!important;
 }
 
 .btn-atomic-tangerine {
