--- a/style.css
+++ b/style.css
@@ -118,7 +118,7 @@ a:hover {
 .d-bloc h5 a,
 .d-bloc h6 a,
 .d-bloc p a {
-    color: rgba(255, 255, 255, .6);
+    color: rgba(255, 255, 255, 0.802);
 }
 
 .d-bloc .a-btn:hover,
@@ -757,7 +757,7 @@ h4 {
 }
 
 .bgc-atomic-tangerine {
-    background-color: #F3976C;
+    background-color: #f56624;
 }
 
 .tc-white {
@@ -765,7 +765,7 @@ h4 {
 }
 
 .btn-atomic-tangerine {
-    background: #F3976C;
+    background: #f56624;
     color: #FFFFFF!important;
 }
 
